
 - sstate (server state, e.g. upsd) should now "PING" drivers also if they
   last reported themselves as "stale" (and might later crash) so their
   connections would be terminated if really no longer active [#1626]

 - Clarified documentation in codebase according to end-user feedback [#1721,
   #1750 and others over time]

 - Several fixes for `upsmon` behavior [#1761, #1680...], including new
   ability to configure default POWERDOWNFLAG location -- packagers are
   encouraged to pick optimal location for their distributions (which
   remains mounted at least read-only late in shutdown) and a new optional
   POLLFAIL_LOG_THROTTLE_MAX setting [#529, #506]

 - Extended Linux systemd support with optional notifications about daemon
   state (READY, RELOADING, STOPPING) and watchdog keep-alive messages [#1590]

 - Extended Linux systemd units with aliases named after the daemons:
   `nut-server.service` as `upsd.service`, and `nut-monitor.service` as
   `upsmon.service` (so simple `systemctl reload upsd` can work) [#1777]

 - Further revision of public headers delivered by NUT was done, particularly
   to address lack of common data types (`size_t`, `ssize_t`, `uint16_t`,
   `time_t` etc.) in third-party client code that earlier sufficed to only
   include NUT headers. Sort of regression by NUT 2.8.0 (note those consumers
   still have to re-declare some numeric variable types used) [#1638, #1615]

 - The `COPYING` file was updated with licenses and attribution for certain
   source code files and blocks coming from the Internet originally [#1758]

---------------------------------------------------------------------------
Release notes for NUT 2.8.0 - what's new since 2.7.4:

NOTE: Earlier discussions (mailing list threads, GitHub issues, etc.) could
refer to this change set (too long in the making) as NUT 2.7.5.

 - New (optional) keywords for configuration files were added,
   so existing NUT 2.7.x builds would not accept them if some